--- a/IdadeDeCachorro/app/src/main/res/layout/activity_main.xml
+++ b/IdadeDeCachorro/app/src/main/res/layout/activity_main.xml
@@ -16,15 +16,16 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintTop_toBottomOf="@+id/edit_idade_cachorro" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/edit_idade_cachorro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="35dp"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:gravity="center|center_horizontal"
+        android:inputType="number|textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,7 +55,7 @@
         android:gravity="center"
         android:text="Digite a idade do seu cachorro, para descobrir a idade dele em anos humanos"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/editText"
+        app:layout_constraintBottom_toTopOf="@+id/edit_idade_cachorro"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
